--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Member</title>
+	<title>Member CMI</title>
 </head>
 <body>
-<h1>Yang Mau Gabung Silahkan</h1>
+	<h1>Yang Mau Gabung Silahkan</h1>
+	<div id="cmi-wrapper">
+	  <a href="https://member.caranya.my.id/" id="previousBtn" class="cmi-anchor" title="Previous">‹</a>
+	  <a href="https://member.caranya.my.id/" class="cmi-logo" title="Member CMI" alt="Member CMI"></a>
+	  <a href="https://member.caranya.my.id/" id="nextBtn" class="cmi-anchor" title="Next">›</a>
+	  <script src="https://member.caranya.my.id/embed.min.js"></script>
+	</div>
 </body>
 </html>
