--- a/index.html
+++ b/index.html
@@ -1,15 +1,101 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Member CMI</title>
-</head>
-<body>
-	<h1>Yang Mau Gabung Silahkan</h1>
-	<div id="cmi-wrapper">
-	  <a href="https://member.caranya.my.id/" id="previousBtn" class="cmi-anchor" title="Previous">‹</a>
-	  <a href="https://member.caranya.my.id/" class="cmi-logo" title="Member CMI" alt="Member CMI"></a>
-	  <a href="https://member.caranya.my.id/" id="nextBtn" class="cmi-anchor" title="Next">›</a>
-	  <script src="https://member.caranya.my.id/embed.min.js"></script>
-	</div>
-</body>
+<html lang="id">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+
+        <title>Hello, world!</title>
+    </head>
+    <body>
+        <div class="container">
+            <section class="mt-5 text-center">
+                <a href="https://www.caranya.my.id"><img src="https://avatars.githubusercontent.com/u/83490598" alt="Caranya My Id" width="100" class="rounded-circle img-thumbnail" /></a>
+                <h1 class="display-4">Member CMI</h1>
+                <p class="lead">Gatau Gimana Caranya</p>
+            </section>
+
+            <div class="text-center" id="cmi-wrapper">
+                <a href="https://member.caranya.my.id" id="previousBtn" class="cmi-anchor" title="Previous">‹</a>
+                <a href="https://member.caranya.my.id" class="cmi-logo" title="Member CMI" alt="Member CMI"></a>
+                <a href="https://member.caranya.my.id" id="nextBtn" class="cmi-anchor" title="Next">›</a>
+                <script src="https://member.caranya.my.id/embed.min.js"></script>
+                <noscript>Logo tidak di tampilkan. Untuk menampilkan logo harap nyalakan fitur JavaScript pada browser anda, terimakasih.</noscript>
+            </div>
+
+            <p class="text-center mt-5">Bergabung bersama kami dan perkuat tali silaturahmi para coder's yang gatau gimana caranya :)</p>
+
+            <h2 class="text-center mt-5">Cara Bergabung</h2>
+            <p>
+                Kirimkan surel ke email berikut ini <a href="mailto:contact@caranya.my.id">contact@caranya.my.id</a> dengan pesan <b>Nama</b> kamu serta <b>Website</b> kamu. Kemudian akan kami tinjau dan proses secepatnya.<br />
+                Setelah itu, Masukkan kode berikut ini ke website kamu:
+            </p>
+            <div class="row">
+                <div class="col-sm">
+                    <pre class="px-3 py-2 rounded bg-light">
+&lt;div id="cmi-wrapper"&gt;
+  &lt;a href="https://member.caranya.my.id" id="previousBtn" class="cmi-anchor" title="Previous"&gt;‹&lt;/a&gt;
+  &lt;a href="https://member.caranya.my.id" class="cmi-logo" title="Member CMI" alt="Member CMI"&gt;&lt;/a&gt;
+  &lt;a href="https://member.caranya.my.id" id="nextBtn" class="cmi-anchor" title="Next"&gt;›&lt;/a&gt;
+  &lt;script src="https://member.caranya.my.id/embed.min.js"&gt;&lt;/script&gt;
+&lt;/div&gt;
+                    </pre>
+                </div>
+            </div>
+
+            <h2 class="text-center mt-3">FAQ</h2>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            Bagaimana Jika Saya Tidak Memiliki Website?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Anda bisa menggunakan Github Page sebagai alternatif untuk membuat website statis.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Apa Tujuan Dari CMI?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            CMI Bertujuan untuk mempererat tali silaturahmi para coder's atau si tukang ngetik kode.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Apa Yang Saya Dapatkan Setelah Bergabung Dengan CMI?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Jika memungkinkan anda bisa mendapatkan subdomain dari CMI yang dapat anda gunakan pada website anda. Serta, anda akan kami masukkan di organisasi
+                            <a href="https://github.com/CaranyaMyId" rel="noreferrer" target="_blank">Github CMI</a>. Untuk mendapatkan subdomain dari CMI anda dapat mengirimkan surel berupa permintaan ke email berikut ini
+                            <a href="mailto:contact@caranya.my.id">contact@caranya.my.id</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="my-5">
+                <footer class="text-center">
+                    <div class="text-center p-3">
+                        <b>
+                            &copy; 2021 Copyright
+                            <a class="" href="https://member.caranya.my.id/">Member CMI</a>
+                        </b>
+                    </div>
+                </footer>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+        </div>
+    </body>
 </html>
