--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   &lt;a href="https://member.caranya.my.id" class="cmi-logo" title="Member CMI" alt="Member CMI"&gt;&lt;/a&gt;
   &lt;a href="https://member.caranya.my.id" id="nextBtn" class="cmi-anchor" title="Next"&gt;›&lt;/a&gt;
   &lt;script src="https://member.caranya.my.id/embed.min.js"&gt;&lt;/script&gt;
-&lt;/div&gt;
-                    </pre>
+&lt;/div&gt;</pre>
                 </div>
             </div>
 
@@ -95,6 +94,7 @@
                     </div>
                 </footer>
             </div>
+
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         </div>
     </body>
