--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="id-ID" dir="ltr">
+<html lang="id-ID">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+        <meta name="robots" content="noindex, nofollow" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="preload stylesheet" as="style" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href='https://www.caranya.my.id/favicon.ico' rel='icon' type='image/x-icon'/>
         <link href='https://cdn.caranya.my.id/img/apple-touch-icon.png' rel='apple-touch-icon' sizes='180x180'/>
         <link href='https://cdn.caranya.my.id/img/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'/>
@@ -44,7 +45,6 @@
             <section class="mt-5 text-center">
                 <a href="https://www.caranya.my.id"><img src="https://avatars.githubusercontent.com/u/83490598" alt="Caranya My Id" width="100" class="rounded-circle img-thumbnail" /></a>
                 <h1 class="display-4">Member CMI</h1>
-                <p class="lead">Gatau Gimana Caranya</p>
             </section>
 
             <div class="text-center" id="cmi-wrapper">
@@ -54,8 +54,6 @@
                 <script src="https://member.caranya.my.id/embed.min.js"></script>
                 <noscript>Logo tidak di tampilkan. Untuk menampilkan logo harap nyalakan fitur JavaScript pada browser anda, terimakasih.</noscript>
             </div>
-
-            <p class="text-center mt-5">Bergabung bersama kami dan perkuat tali silaturahmi para coder's yang gatau gimana caranya, supaya sama-sama tahu :)</p>
 
             <h2 class="text-center mt-5">Cara Bergabung</h2>
             <p>
@@ -84,48 +82,6 @@
                 <tbody id="member">
                 </tbody>
             </table>
-
-            <h2 class="text-center mt-3">FAQ</h2>
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                            Bagaimana Jika Saya Tidak Memiliki Website?
-                        </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            Anda bisa menggunakan Github Page sebagai alternatif untuk membuat website statis.
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Apa Tujuan Dari CMI?
-                        </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            CMI Bertujuan untuk mempererat tali silaturahmi para coder's atau si tukang ngetik kode.
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Apa Yang Saya Dapatkan Setelah Bergabung Dengan CMI?
-                        </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            Jika memungkinkan anda bisa mendapatkan subdomain dari CMI yang dapat anda gunakan pada website anda. Serta, anda akan kami masukkan di organisasi
-                            <a href="https://github.com/CaranyaMyId" rel="noreferrer" target="_blank">Github CMI</a>. Untuk mendapatkan subdomain dari CMI anda dapat mengirimkan surel berupa permintaan ke email berikut ini
-                            <a href="mailto:contact@caranya.my.id">contact@caranya.my.id</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <div class="my-5">
                 <footer class="text-center">
@@ -163,7 +119,6 @@
                   }
                 }
             </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         </div>
     </body>
 </html>
